src/test/ui/privacy/legacy-ctor-visibility.stderr
error: private struct constructors are not usable through re-exports in outer modules
  --> $DIR/legacy-ctor-visibility.rs:13:13
   |
LL |             S(10);
   |             ^
   |
   = note: #[deny(legacy_constructor_visibility)] on by default
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #39207 <https://github.com/rust-lang/rust/issues/39207>

error: aborting due to previous error

